--- a/config-template.json
+++ b/config-template.json
@@ -1,6 +1,7 @@
 {
-	"token" : "discord bot tok",
-    "clientId" : "discord clientId",
-    "guildId" : "discord guildId",
-    "weather" : "www.data.go.kr weather token"
+  "token": "discord bot tok",
+  "clientId": "discord clientId",
+  "guildId": "discord guildId",
+  "weather": "www.data.go.kr weather token",
+  "KakaoAK": "Kakao token"
 }
