--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "discord bot",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
+    "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "imports": {
+    "#src/*": "./*"
   },
   "author": "kooky",
   "license": "ISC",
