날씨 소스코드 정리

--- a/config-template.json
+++ b/config-template.json
@@ -2,6 +2,6 @@
   "token": "discord bot tok",
   "clientId": "discord clientId",
   "guildId": "discord guildId",
-  "weather": "www.data.go.kr weather token",
+  "weatherKey": "www.data.go.kr weather token",
   "KakaoAK": "Kakao token"
 }
